# experiments

./: .gitignore  Pipfile  README.md  pyproject.toml
content_aggregator_app/: README.md  scratch.ipynb
delta_data/: dataframe_examples.ipynb
directory_traveler/: README.md  development_notebook.ipynb
document_rag/: README.md
mindfulness_app/: main.py
music_recommendation_app/: README.md
tower_defense_game/: README.md  pyproject.toml
tower_defense_game/src/tower_defense_game/: enemy.py  main.py  tower.py
word_game_solvers/tests/: test_main.py
