[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Collection of random experimental projects ranging from small to large."
authors = ["Max DeLong <95108037+maxdelong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
praw = "^7.7.1"
ipykernel = "^6.29.4"
wikipedia = "^1.4.0"
duckduckgo-search = "^6.1.7"
numpy = "^2.0.0"
SQLAlchemy = "^2.0.31"
peewee = "^3.17.5"
pytest = "^8.2.2"
polars = "^0.20.31"
duckdb = "^1.0.0"
deltalake = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
